--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tailwind:build": "npx tailwindcss -i ./assets/css/tailwind.css -o ./static/css/style.css --minify",
-    "tailwind:watch": "npx tailwindcss -i ./assets/css/tailwind.css -o ./static/css/style.css --watch"    
+    "tailwind:watch": "npx tailwindcss -i ./assets/css/tailwind.css -o ./static/css/style.css --watch",
+    "dev": "tailwindcss -i ./assets/css/tailwind.css -o ./static/css/style.css --watch",
+    "build": "tailwindcss -i ./assets/css/tailwind.css -o ./static/css/style.css --minify",
+    "lint": "sunlint --all --input=.",
+    "lint:changed": "sunlint --all --changed-files",
+    "lint:security": "sunlint --security --input=."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@sun-asterisk/sunlint": "^1.3.30",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
     "autoprefixer": "^10.4.22",
+    "eslint": "^9.39.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3"
   }
 }
